--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             </ul>
         </div>
     </div>
+
     <div class="hero"></div>
-    <div class="content">
+    
+    <div class="content"> <!--'search-engine-optimization' id added, link fixed.-->
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -48,6 +50,7 @@
             </p>
         </div>
     </div>
+
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,12 +74,14 @@
             </p>
         </div>
     </div>
+
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
+
 </body>
 
 </html>
