--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <section>
                 <div class="content"> <!--'search-engine-optimization' id added, link fixed.-->
                     <section><!--<section> tag added-->
-                        <div id="search-engine-optimization" class="search-engine-optimization">
+                        <div id="search-engine-optimization" class="content-box">
                             <section>
                                 <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization" class="float-left" />
                                 <h2>Search Engine Optimization</h2>
@@ -47,7 +47,7 @@
                                 </p>
                             </section>  
                         </div>
-                            <div id="online-reputation-management" class="online-reputation-management">
+                            <div id="online-reputation-management" class="content-box">
                                 <section><!--<section> tag added-->
                                     <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management" class="float-right" />
                                     <h2>Online Reputation Management</h2>
@@ -56,7 +56,7 @@
                                     </p>
                                 </section>
                             </div>
-                        <div id="social-media-marketing" class="social-media-marketing">
+                        <div id="social-media-marketing" class="content-box">
                             <section><!--<section> tag added-->
                                 <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing" class="float-left" />
                                 <h2>Social Media Marketing</h2>
@@ -70,7 +70,7 @@
                     
                 <div class="benefits">
                     <section>
-                        <div class="benefit-lead">
+                        <div class="benefit-prop">
                             <section><!--<section> tag added-->
                                 <h3>Lead Generation</h3>
                                 <img src="./assets/images/lead-generation.png" alt="lead-generation" />
@@ -79,7 +79,7 @@
                                 </p>
                             </section>
                         </div>
-                        <div class="benefit-brand">
+                        <div class="benefit-prop">
                             <section><!--<section> tag added-->
                                 <h3>Brand Awareness</h3>
                                 <img src="./assets/images/brand-awareness.png" alt="brand-awareness" />
@@ -88,7 +88,7 @@
                                 </p>
                             </section>
                         </div>
-                        <div class="benefit-cost">
+                        <div class="benefit-prop">
                             <section><!--<section> tag added-->
                                 <h3>Cost Management</h3>
                                 <img src="./assets/images/cost-management.png" alt="cost-management" />
