--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
-        <title>Horiseon</title>
+        <title>Horiseon | Search Engine Optimization | Online Reputation Management | Social Media Marketing</title> <!--Added company name to title-->
     </head>
-
     
     <body>
 
@@ -40,7 +39,7 @@
                     <section><!--<section> tag added-->
                         <div id="search-engine-optimization" class="content-box">
                             <section>
-                                <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization" class="float-left" />
+                                <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization image not found" class="float-left" />
                                 <h2>Search Engine Optimization</h2>
                                 <p>
                                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -49,7 +48,7 @@
                         </div>
                             <div id="online-reputation-management" class="content-box">
                                 <section><!--<section> tag added-->
-                                    <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management" class="float-right" />
+                                    <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management image not found" class="float-right" />
                                     <h2>Online Reputation Management</h2>
                                     <p>
                                         The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -58,7 +57,7 @@
                             </div>
                         <div id="social-media-marketing" class="content-box">
                             <section><!--<section> tag added-->
-                                <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing" class="float-left" />
+                                <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing image not found" class="float-left" />
                                 <h2>Social Media Marketing</h2>
                                 <p>
                                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -73,7 +72,7 @@
                         <div class="benefit-prop">
                             <section><!--<section> tag added-->
                                 <h3>Lead Generation</h3>
-                                <img src="./assets/images/lead-generation.png" alt="lead-generation" />
+                                <img src="./assets/images/lead-generation.png" alt="lead generation image not found" />
                                 <p>
                                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                                 </p>
@@ -82,7 +81,7 @@
                         <div class="benefit-prop">
                             <section><!--<section> tag added-->
                                 <h3>Brand Awareness</h3>
-                                <img src="./assets/images/brand-awareness.png" alt="brand-awareness" />
+                                <img src="./assets/images/brand-awareness.png" alt="brand awareness image not found" />
                                 <p>
                                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                                 </p>
@@ -91,7 +90,7 @@
                         <div class="benefit-prop">
                             <section><!--<section> tag added-->
                                 <h3>Cost Management</h3>
-                                <img src="./assets/images/cost-management.png" alt="cost-management" />
+                                <img src="./assets/images/cost-management.png" alt="cost management image not found" />
                                 <p>
                                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                                 </p>
