--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             </section>
     
             <section>
-                <div class="content"> <!--'search-engine-optimization' id added, link fixed.-->
-                    <section><!--<section> tag added-->
+                <div class="content"> <!--'search-engine-optimization' id added, link fixed & section tags added.-->
+                    <section>
                         <div id="search-engine-optimization" class="content-box">
                             <section>
                                 <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization image not found" class="float-left" />
@@ -47,7 +47,7 @@
                             </section>  
                         </div>
                             <div id="online-reputation-management" class="content-box">
-                                <section><!--<section> tag added-->
+                                <section>
                                     <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management image not found" class="float-right" />
                                     <h2>Online Reputation Management</h2>
                                     <p>
@@ -56,7 +56,7 @@
                                 </section>
                             </div>
                         <div id="social-media-marketing" class="content-box">
-                            <section><!--<section> tag added-->
+                            <section>
                                 <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing image not found" class="float-left" />
                                 <h2>Social Media Marketing</h2>
                                 <p>
@@ -70,7 +70,7 @@
                 <div class="benefits">
                     <section>
                         <div class="benefit-prop">
-                            <section><!--<section> tag added-->
+                            <section>
                                 <h3>Lead Generation</h3>
                                 <img src="./assets/images/lead-generation.png" alt="lead generation image not found" />
                                 <p>
@@ -79,7 +79,7 @@
                             </section>
                         </div>
                         <div class="benefit-prop">
-                            <section><!--<section> tag added-->
+                            <section>
                                 <h3>Brand Awareness</h3>
                                 <img src="./assets/images/brand-awareness.png" alt="brand awareness image not found" />
                                 <p>
@@ -88,7 +88,7 @@
                             </section>
                         </div>
                         <div class="benefit-prop">
-                            <section><!--<section> tag added-->
+                            <section>
                                 <h3>Cost Management</h3>
                                 <img src="./assets/images/cost-management.png" alt="cost management image not found" />
                                 <p>
